Added support for downloading based on URL as well